--- a/ejemplo1UserDefaultsDiTema2/Base.lproj/Main.storyboard
+++ b/ejemplo1UserDefaultsDiTema2/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ExC-JN-GDC">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Csa-gA-UL1">
-                                <rect key="frame" x="20" y="152" width="374" height="21"/>
+                                <rect key="frame" x="20" y="196" width="374" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="374" id="GL0-Q1-FBG"/>
                                     <constraint firstAttribute="height" constant="21" id="fZ9-UV-uxx"/>
@@ -27,7 +27,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="escribe algo" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="x6U-bk-iSM">
-                                <rect key="frame" x="20" y="304" width="374" height="34"/>
+                                <rect key="frame" x="20" y="348" width="374" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="374" id="S56-6E-JAj"/>
                                     <constraint firstAttribute="height" constant="34" id="rTf-iT-xNa"/>
@@ -36,7 +36,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5fZ-Vf-Tbc">
-                                <rect key="frame" x="127" y="433" width="129" height="30"/>
+                                <rect key="frame" x="127" y="477" width="129" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="129" id="DQy-mt-BcU"/>
                                     <constraint firstAttribute="height" constant="30" id="xaQ-WW-FR3"/>
@@ -47,7 +47,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FEw-lR-6fL">
-                                <rect key="frame" x="137" y="543" width="109" height="30"/>
+                                <rect key="frame" x="137" y="587" width="109" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="IVV-GB-wHR"/>
                                     <constraint firstAttribute="width" constant="109" id="hAl-WR-hEM"/>
@@ -58,7 +58,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rBu-tc-tEA">
-                                <rect key="frame" x="137" y="636" width="87" height="30"/>
+                                <rect key="frame" x="137" y="680" width="87" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="87" id="6Cn-wY-o1z"/>
                                     <constraint firstAttribute="height" constant="30" id="f2b-23-7LU"/>
@@ -89,6 +89,13 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Csa-gA-UL1" secondAttribute="trailing" constant="20" id="sNf-DK-K4o"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="l2f-2n-wus">
+                        <barButtonItem key="rightBarButtonItem" title="configuracion" id="dZy-f1-xbB">
+                            <connections>
+                                <segue destination="C38-3h-8rD" kind="show" id="tuY-KL-fjC"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="lbTexto" destination="Csa-gA-UL1" id="pq7-uF-9Db"/>
                         <outlet property="txtPalabra" destination="x6U-bk-iSM" id="Yhz-Yq-iew"/>
@@ -96,7 +103,86 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="140.57971014492756" y="102.45535714285714"/>
+            <point key="canvasLocation" x="460.86956521739131" y="26.785714285714285"/>
+        </scene>
+        <!--Configuracion View Controller-->
+        <scene sceneID="2gt-uA-Vbk">
+            <objects>
+                <viewController id="C38-3h-8rD" customClass="ConfiguracionViewController" customModule="ejemplo1UserDefaultsDiTema2" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2sy-Ju-iCa">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="mostrar mensaje bienvenida" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sal-mN-g93">
+                                <rect key="frame" x="20" y="336" width="368" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="JbF-JH-wCa"/>
+                                    <constraint firstAttribute="width" constant="368" id="xQS-U7-1M4"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="nombre usuario" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FBA-W4-pEe">
+                                <rect key="frame" x="20" y="194" width="374" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="374" id="ORy-GO-DX6"/>
+                                    <constraint firstAttribute="height" constant="34" id="tPV-zb-Rfu"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mKL-qp-v5S">
+                                <rect key="frame" x="341" y="365" width="49" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="47" id="QEb-HO-Thd"/>
+                                    <constraint firstAttribute="height" constant="31" id="edF-FF-kL3"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="btnActivar:" destination="C38-3h-8rD" eventType="valueChanged" id="Btv-hI-EEW"/>
+                                </connections>
+                            </switch>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="wJ1-y4-iGK"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="wJ1-y4-iGK" firstAttribute="trailing" secondItem="mKL-qp-v5S" secondAttribute="trailing" constant="26" id="8Vb-yj-GxG"/>
+                            <constraint firstItem="Sal-mN-g93" firstAttribute="top" secondItem="FBA-W4-pEe" secondAttribute="bottom" constant="108" id="AGa-cT-dFf"/>
+                            <constraint firstItem="Sal-mN-g93" firstAttribute="leading" secondItem="wJ1-y4-iGK" secondAttribute="leading" constant="20" id="CLR-PD-fEm"/>
+                            <constraint firstItem="FBA-W4-pEe" firstAttribute="top" secondItem="wJ1-y4-iGK" secondAttribute="top" constant="106" id="Tab-tp-068"/>
+                            <constraint firstItem="wJ1-y4-iGK" firstAttribute="trailing" secondItem="Sal-mN-g93" secondAttribute="trailing" constant="26" id="YJa-lc-JMl"/>
+                            <constraint firstItem="FBA-W4-pEe" firstAttribute="leading" secondItem="wJ1-y4-iGK" secondAttribute="leading" constant="20" id="abJ-Av-jr0"/>
+                            <constraint firstItem="wJ1-y4-iGK" firstAttribute="trailing" secondItem="FBA-W4-pEe" secondAttribute="trailing" constant="20" id="e2D-70-XCC"/>
+                            <constraint firstItem="mKL-qp-v5S" firstAttribute="top" secondItem="Sal-mN-g93" secondAttribute="bottom" constant="8" symbolic="YES" id="qaw-c6-A2l"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="h1v-k9-BMz"/>
+                    <connections>
+                        <outlet property="miçswitch" destination="mKL-qp-v5S" id="Xzt-Nq-q4o"/>
+                        <outlet property="txtUsuario" destination="FBA-W4-pEe" id="Va1-Ur-OiT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vla-gh-aIW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1320.289855072464" y="10.714285714285714"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="rse-Pv-gr6">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ExC-JN-GDC" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="3bR-nc-Uu4">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="QRj-uH-hBy"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Uf5-K5-lzG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-449.27536231884062" y="26.785714285714285"/>
         </scene>
     </scenes>
     <resources>
